// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageCard should render with many props assigned 1`] = `
<Card
  className="ImageCard test"
  hasAnimationOnHover={false}
>
  <React.Fragment>
    <div
      className="content"
    >
      <p>
        Testing!
      </p>
    </div>
    <MockedNextImage
      alt="Test title"
      height={225}
      layout="fixed"
      src="/static/images/Family1.jpg"
      width={325}
    />
  </React.Fragment>
</Card>
`;

exports[`ImageCard should render with required props 1`] = `
<Card
  className="ImageCard"
  hasAnimationOnHover={false}
>
  <React.Fragment>
    <MockedNextImage
      alt="Test title"
      height={225}
      layout="fixed"
      src="/static/images/Family1.jpg"
      width={325}
    />
    <div
      className="content"
    >
      <p>
        Testing!
      </p>
    </div>
  </React.Fragment>
</Card>
`;
